# Croak

./: .gitignore  LICENSE  README.md  docker-compose.yml  env.sample  mprocs.yaml.sample  pyproject.toml  requirements.txt
backend/: main.py  manage.py
backend/croak/: settings.py  urls.py
backend/croak_app/: apps.py
backend/croak_site/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
