[project]
name = "croak"
version = "0"
description = "croak"
authors = [
    {name = "Mackenzie Linden",email = "mlinden1403@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "watchfiles (>=1.0.5,<2.0.0)"
]

[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
